# acquisition-helper

./: .env.example  .gitignore  AGENTS.md  Baseline.py  README.md  SME_Platform_Acquisition_Report_v3.md  main.py  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/plans/: baseline_dual_output_61c04609.plan.md  crewai_full_refactor_7db83324.plan.md
.cursor/rules/: agent-safety.mdc  crew-orchestration.mdc  hitl-checkpoints.mdc  layer-routing.mdc  learnings.mdc  project-rules.mdc  verification-gate.mdc
.cursor/skills/acquisition-flow/: SKILL.md
.cursor/skills/control-layer/: SKILL.md
.cursor/skills/crew-orchestration/: SKILL.md
.cursor/skills/crew-tools/: SKILL.md
.cursor/skills/m-and-a-research/: SKILL.md
.cursor/skills/pattern-error-learning/: SKILL.md
.cursor/skills/proactive-guardian/: SKILL.md
docs/: learnings.md
knowledge/: README.md
scripts/hooks/: validate-crew-safety.py
src/acquisition_helper/: __init__.py  env.py  main.py
src/acquisition_helper/config/: defaults.yaml  loader.py
src/acquisition_helper/control/: __init__.py  agent_registry.py  budget_monitor.py  flow_planner.py  guardrails.py  hitl.py  profiles.py
src/acquisition_helper/flow/: __init__.py  acquisition_flow.py
src/acquisition_helper/models/: __init__.py  intake.py  report.py  workflow_plan.py
src/acquisition_helper/reporting/: __init__.py  markdown_report.py
src/acquisition_helper/tools/: registry.py  serper_tool.py
tests/: test_budget_monitor.py  test_env.py  test_flow_planner.py  test_research_crew_factory.py  test_tier_selection.py
(+8 files in other folders)
