[project]
name = "acquisition_helper"
version = "0.1.0"
description = "M&A SME acquisition research with CrewAI Flows and tiered Crews"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai]>=1.2.0",
    "crewai-tools>=0.14.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
run_crew = "acquisition_helper.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acquisition_helper"]

[tool.hatch.build.targets.wheel.force-include]
"src/acquisition_helper/config" = "acquisition_helper/config"

[tool.crewai]
type = "flow"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
